--- a/views/app/about-us.ejs
+++ b/views/app/about-us.ejs
@@ -14,16 +14,30 @@
             <div class="row">
         
                 <div class="col-12 col-md-6">
-                    <img class="img-fluid img-round50" src="/images/aboutUs.jpg" alt="about-img">
+                    <img class="img-fluid img-round50" src="/images/about.jpg" alt="about-img">
                 </div>
         
                 <div class="col-12 col-md-6">
                     <div class="box">
                         <h3>Who we Are</h3>
-                        <p>Wealth Bazzar was established as an independent business advisory practice based out in London, UK working with MSMEs/SMEs from across the Globe that typically have a turnover between £2m and £100m.
-                            We act as a catalyst in providing corporate finance advice and assistance in a wide variety of situations that include raising development and turnaround funding, MBOs/MBIs, mergers, acquisitions and disposals, including Business Setup, Offshore company formation with Visas Assistance, Residential & Commercial Real Estate Sales & Management. With our Professional touch we offer solutions that cater to financial needs of Corporates on the lead advisory role from initial discussions through to successful completion.
-                            Wealth Bazzar Role and Mission is to act as a foundation of interaction in bringing clients and providers together and to create tailor-made solutions through its in-house capabilities and those of its Associates & chosen specialists, all this combining to deliver exceptional added value to the specific deal.
-                            Wealth Bazzar’s experienced team with commitment and drive that underpin strong relationships with clients and communities, goes beyond the economic interest.</p>
+                        <div class="content">
+                            <p>"We believe in service to society through financial help and asset safety"</p>
+                            <p>Wealth Bazzar.com brings you the comfort of understanding finance from your home. It is a one-stop solution for all your financial needs including transactions and assets. Helpful for both individuals and corporate seeking to understand how investing, stock market, and loaning works, Wealth Bazzar caters to your most specific needs as well.
+                            </p>
+                            <p>One of the finest example for this would be our research department which is always ready for consultation in cases of intraday and delivery trading. Very few firms offer such a department dedicated to such a complicated procedure.</p>
+                            <p>The creation of wealth from income without compromising your personal integrity is part of Wealth Bazzar's portfolio. We strategize and execute the plan by offering you a three-fold return transacting from your account itself. This in it's sense means that you will have your record on your transactions as both the account holder and investor. The responsibility of transaction, however, lies in us.</p>
+                            <p>Money is a commodity and it is important to safeguard it and multiply it. You can either do it by investing it into stock market or by becoming a venture capitalist. However, you need a right sense of direction and guidance into this vast world that we call ‘Stock Market’. 
+                            </p>
+                            <p>There are times when a ten-rupee note can make you a millionaire and a million-dollar stock bring you on the streets. It all depends on how well you understand inflation and how the shares work. Wealth Bazzar creates a perfect plan for you to understand through its Investment Advisory so that you and your money can stay safe in the Stock Market.
+                            </p>
+                            <p>The stock market in India is highly untapped and requires the expertise of investors who have explored and exploited the financial assets to the fullest. We at Wealth Bazzar provide you with the said expertise and the option to seek that expertise.
+                            </p>
+                            <p>Money is also important in your general day to day life. Buying a house, building your business or sending your children abroad for studying. All of these are examples of activities that require huge amounts of money. But there are times when you may not really have it. This is often embarrassing and may lead to unforeseen situations for the person facing this dilemma. Such situations and consequences can be avoided if we have a certain amount kept aside which is always multiplying for our benefit.</p>
+                            <p>Wealth Bazzar helps you get adequate amounts of loans at low interest from relevant banks within a week or so. We also handle your paperwork because we know it is a hassle. Getting a loan from a bank is never easy but with us , it is never hard.
+                            </p>
+                            <p>If you’re worried about how to turn your liquid money into a profitable asset and are seeking help, you’ve come to the right place. At Wealth Bazzar, you can understand the importance of investing your money into real estate and gold apart from investing it in the stock market. We also teach you ways on how to buy assets at lower costs and then turning them into profitable investments.</p>
+                            <p>All in all, we’re your first option and last helper as our service stands for self and society. As someone once said, “Help will be given to those who ask for it.”</p>
+                        </div>
                     </div>
                     
                 </div>
