--- a/views/services/insurance.ejs
+++ b/views/services/insurance.ejs
@@ -12,11 +12,13 @@
             <div class="col-12 col-md-6">
               <div class="container">
                 <h3><%= service.title %> </h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem unde nam quae nihil explicabo nemo
-                  accusantium alias illo repudiandae aliquid quo fugiat magnam tempore excepturi rerum dicta necessitatibus,
-                  provident consequatur dolorum enim reprehenderit voluptatum laboriosam ab? Voluptates repudiandae, incidunt
-                  repellat labore corporis provident blanditiis suscipit explicabo iure pariatur laborum distinctio libero
-                  placeat deserunt vero, eius velit architecto est reiciendis ipsum?</p>
+                <div class="content">
+                    <p>Insurance is a great backup plan one can seek when trying to cover their future amnesties. There are multiple variations of insurance available for one to choose from. Some, offered by Wealth Bazzar are mentioned below:</p>
+                    <p>1. Life Insurance</p>
+                    <p>2. General Insurance: </p>
+                    <p>(i) Motor Insurance, (ii) Health Insurance, (iii) Fire Insurance</p>
+                </div>
+                    
                 </div>
                 <div class="text-center mt-3">
                     <a class="mybtn1" href="/contact-us">Ask to Our Expert</a>
@@ -60,7 +62,7 @@
                 </div>
     
                 <div class="ins_desc" ;>
-                        <h3>Term Insurance</h3>
+                        <h3>Health Insurance</h3>
                         <hr>
                         <h4>Get Rs 5 Lac Health Cover @ Rs 300/Month *
                             Get Up To 15% Online Discount**</h4>
