--- a/views/services/investment.ejs
+++ b/views/services/investment.ejs
@@ -13,16 +13,11 @@
               <div class="container">
                 <h3><%= service.title %> </h3>
                 <div class="content">
-                  <p>Goal-driven financial advice that helps you take the best investment decisions to build wealth</p>
-                  <p>Paperless, quick processes that enable you to invest instantly using your Aadhaar card
-                    Instant personalized recommendations from Wealth Master,   friendliest robo advisor
-                    Dedicated advisors who help you create portfolios on demand, review and manage your investments over phone, e-mail, chat and Skype
-                    </p>
-                    <p>Wealth Master</p>
-                    <p>1. Offers you high-quality, personalized advice for your investment goals</p>
-                      <p>2. Monitors and reviews your portfolio periodically</p>
-                      <p>Flexible and allows you to implement changes easily</p>
-                 
+                    <p> One of the most important things to remember when trying to enter the investment sphere is to be prepared for the consequences or to play smartly. Wealth Bazzar offers you relevant choices to start with if you're looking for a guide. The choices presented are: </p>
+                    <p>1. PRE- IPO</p>
+                    <p>2. Mutual Fund</p>
+                    <p>3. Private Equity- UK, USA & INDIA</p>
+                    <p>4. Real State</p>
                 </div>
                 </div>
                 <div class="text-center mt-3">
@@ -35,7 +30,6 @@
                 <img src="/<%= (service.image_url).replace(/\\/g, "/") %>" class="img-round50 img-fluid" %}>
               </figure>
             </div>
-    
         </div>
     
     </div>
