--- a/views/services/loan.ejs
+++ b/views/services/loan.ejs
@@ -12,11 +12,13 @@
             <div class="col-12 col-md-6">
               <div class="container">
                 <h3><%= service.title %> </h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem unde nam quae nihil explicabo nemo
-                  accusantium alias illo repudiandae aliquid quo fugiat magnam tempore excepturi rerum dicta necessitatibus,
-                  provident consequatur dolorum enim reprehenderit voluptatum laboriosam ab? Voluptates repudiandae, incidunt
-                  repellat labore corporis provident blanditiis suscipit explicabo iure pariatur laborum distinctio libero
-                  placeat deserunt vero, eius velit architecto est reiciendis ipsum?</p>
+               <div class="content">
+                 <p>Wealth Bazzar has partnered with multiple banks to provide you with the comfort of buying loans at your ease. Therefore, Wealth Bazzar covers almost every loan categorized under banks.</p>
+                 <p>1. Personal Loan</p>
+                 <p>2. Business Loan</p>
+                 <p>3. Home Loan</p>
+                 <p>4. Loan Against Property</p>
+               </div>
                 </div>
                 <div class="text-center mt-3">
                     <a class="mybtn1" href="/contact-us">Ask to Our Expert</a>
