--- a/views/app/why-us.ejs
+++ b/views/app/why-us.ejs
@@ -14,7 +14,7 @@
             <div class="row">
         
                 <div class="col-12 col-md-6">
-                    <img class="img-fluid img-round50" src="/images/Us.jpg" alt="about-img">
+                    <img class="img-fluid img-round50" src="/images/whyUs.jpg" alt="about-img">
                 </div>
         
                 <div class="col-12 col-md-6">
