--- a/views/services/wbAcademy.ejs
+++ b/views/services/wbAcademy.ejs
@@ -13,16 +13,7 @@
               <div class="container">
                 <h3><%= service.title %> </h3>
                 <div class="content">
-                  <p>Goal-driven financial advice that helps you take the best investment decisions to build wealth</p>
-                  <p>Paperless, quick processes that enable you to invest instantly using your Aadhaar card
-                    Instant personalized recommendations from Wealth Master,   friendliest robo advisor
-                    Dedicated advisors who help you create portfolios on demand, review and manage your investments over phone, e-mail, chat and Skype
-                    </p>
-                    <p>Wealth Master</p>
-                    <p>1. Offers you high-quality, personalized advice for your investment goals</p>
-                      <p>2. Monitors and reviews your portfolio periodically</p>
-                      <p>Flexible and allows you to implement changes easily</p>
-                 
+                    <p><%= service.description %> </p>
                 </div>
                 </div>
                 <div class="text-center mt-3">
@@ -35,7 +26,6 @@
                 <img src="/<%= (service.image_url).replace(/\\/g, "/") %>" class="img-round50 img-fluid" %}>
               </figure>
             </div>
-    
         </div>
     
     </div>
